# Ingest

./: .formatter.exs  .gitignore  Dockerfile  README.md  mix.exs  readme.md  start.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
apps/ingest/: .gitignore  mix.exs
apps/ingest_web/: mix.exs
assets/: tailwind.config.js
assets/js/: app.js
azure_storage/: .gitignore  README.md  mix.exs
azure_storage/lib/: azure_storage.ex
azure_storage/lib/blob/: blob.ex
azure_storage/lib/config/: config.ex
azure_storage/lib/container/: container.ex
azure_storage/lib/request/: request.ex
azure_storage/test/: azure_storage_test.exs
box_importer/: .gitignore  README.md  mix.exs  train.py
box_importer/lib/: box_importer.ex
box_importer/lib/file/: file.ex
box_importer/lib/files/: files.ex
box_importer/lib/request/: request.ex
box_importer/test/: box_importer_test.exs
client/: .gitignore  Cargo.toml  readme.md
client/src/: config.rs  connection.rs  errors.rs  main.rs  tests.rs  uploader.rs  webserver.rs
client/src/uploader/: mod.rs
client/templates/: main.hbs  register.hbs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/can_do/: can_do.ex
lib/ingest/: access.ex  accounts.ex  application.ex  can_do.ex  datahub.ex  destinations.ex  ecto_resource_type.ex  lakefs.ex  projects.ex  requests.ex
lib/ingest/access/: policy.ex  resource_policy.ex
lib/ingest/accounts/: notifications.ex  user.ex
lib/ingest/azure_storage/: azure_storage.ex
lib/ingest/destinations/: destination.ex  destination_config.ex
lib/ingest/processors/: file_processor.ex
lib/ingest/projects/: project.ex  project_members.ex
lib/ingest/requests/: request.ex  request_notifier.ex  template.ex
lib/ingest/uploaders/: azure.ex  deeplynx.ex  lakefs.ex  s3.ex  uploader.ex
lib/ingest/workers/: destination.ex  metadata.ex
lib/ingest_web/: endpoint.ex  gettext.ex  notifications.ex  router.ex  user_auth.ex
lib/ingest_web/channels/: client_socket.ex  user_socket.ex
lib/ingest_web/components/: core_components.ex  layouts.ex  sidebar_desktop.ex
lib/ingest_web/components_live/: destination_additional_config_form.ex  destination_form.ex  destination_sharing.ex  metadata_entry_form.ex  notifications_bar_live.ex  project_form.ex  project_search_form.ex  request_form.ex  request_modal.ex  search_form.ex  share_template_form.ex  template_form.ex
lib/ingest_web/controllers/: api.ex  oidc_controller.ex  page_controller.ex  page_html.ex
lib/ingest_web/live/: user_confirmation_instructions_live.ex  user_forgot_password_live.ex  user_login_live.ex  user_registration_live.ex  user_settings_live.ex  wiki_live.ex
notebooks/: webhooks.livemd
priv/repo/: seeds.exs
priv/repo/migrations/: 20231012174723_create_users_auth_tables.exs  (+11 more)
priv/sqlite_extensions/: install_sqlean.sh
priv/wiki/: home.md
server/: .formatter.exs  .gitignore  .tool-versions  Dockerfile  MigrationDockerfile  README.md  mix.exs  start.sh
server/assets/: package-lock.json  package.json  tailwind.config.js
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
server/kubernetes/: kubernetes.yml
server/lib/: ingest.ex  ingest_web.ex
server/notebooks/: webhooks.livemd
server/test/: test_helper.exs
test/ingest/: access_test.exs  accounts_test.exs  azure_storage_test.exs  datahub_test.exs  destinations_test.exs  lakefs_test.exs  projects_test.exs  requests_test.exs  uploads_test.exs
test/ingest_web/: user_auth_test.exs
test/support/: conn_case.ex
(+387 files in other folders)
