[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version ="0.6.20", features = ["ws"] }
config = { version = "0.13.3", features = ["yaml"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" , "sqlite", "macros", "chrono"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tray-icon = "0.10.0"
image = { version = "0.24.7", features = [] }
winit = "0.29.3"
chrono = { version = "0.4.31", features = ["serde"] }

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
