[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
config = { version = "0.14.0", features = ["yaml"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" , "sqlite", "macros", "chrono"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tray-icon = "0.14.3"
image = { version = "0.25.1", features = [] }
winit = "0.30.3"
chrono = { version = "0.4.31", features = ["serde"] }
rust-embed = "8.0.0"
handlebars = { version = "5.1.2", features = ["rust-embed"] }
hyper = "1.4.1"
serde_json = "1.0.108"
tokio-tungstenite = "0.23.1"
futures = "0.3.29"
futures-util = "0.3.29"
tracing = "0.1"
tracing-subscriber = "0.3.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
